Implemented rest services for job related resources