@@ -1,7 +1,5 @@
 package com.exceedo.vrpapi.controller;
 
-import java.util.List;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -13,74 +11,87 @@ import com.exceedo.vrpapi.domain.RouteType;
 import com.exceedo.vrpapi.domain.RouteTypeList;
 import com.exceedo.vrpapi.repository.RouteTypeRepository;
 
+
 @RestController
 public class RouteTypeController {
 
 	@Autowired
 	private RouteTypeRepository routeTypeRepository;
 
-	@RequestMapping(path = "/routetype", method = RequestMethod.POST, consumes = "application/json", produces = "application/json")
-	public DataSaveResponse saveRouteTypeList(@RequestBody RouteTypeList routeTypeList) {
+	@RequestMapping(path = "job/{jobId}/routetypes", method = RequestMethod.POST, consumes = "application/json", produces = "application/json")
+	public DataSaveResponse saveRouteTypeList(@PathVariable String jobId, @RequestBody RouteTypeList routeTypeList) {
 
 		DataSaveResponse response = new DataSaveResponse();
-		int recCount = 0;
-		for (RouteType routeType : routeTypeList.getRouteTypeList()) {
-			routeTypeRepository.save(routeType);
-			recCount++;
-		}
+		routeTypeList.setJobId(jobId);
+		int recCount = routeTypeList.getRouteTypeList().size();
+		routeTypeRepository.save(routeTypeList);
 		response.setSaveCount(recCount);
 		response.setStatus("success");
 		return response;
 	}
 
-	@RequestMapping(path = "/routetype", method = RequestMethod.GET, consumes = "application/json", produces = "application/json")
-	public RouteTypeList getRouteTypeList() {
+	@RequestMapping(path = "job/{jobId}/routetypes", method = RequestMethod.GET, consumes = "application/json", produces = "application/json")
+	public RouteTypeList getRouteTypeList(@PathVariable String jobId) {
 
-		RouteTypeList routeTypeList = new RouteTypeList();
-		List<RouteType> list = routeTypeRepository.findAll();
-		routeTypeList.setRouteTypeList(list);
+		RouteTypeList routeTypeList = routeTypeRepository.findOne(jobId);
 		return routeTypeList;
 	}
 
-	@RequestMapping(path = "/routetype/{routeTypeId}", method = RequestMethod.GET, consumes = "application/json", produces = "application/json")
-	public RouteType getRouteTypeList(@PathVariable String routeTypeId) {
-		RouteType routeType = routeTypeRepository.findOne(new Integer(routeTypeId));
-		return routeType;
+	@RequestMapping(path = "job/{jobId}/routeType/{routeTypeId}", method = RequestMethod.GET, consumes = "application/json", produces = "application/json")
+	public RouteType getRouteType(@PathVariable String jobId, @PathVariable String routeTypeId) {
+		RouteTypeList routeTypeList = routeTypeRepository.findOne(jobId);
+		for (RouteType routeType : routeTypeList.getRouteTypeList()) {
+			if(routeType.getId() == Integer.valueOf(routeTypeId)) {
+				return routeType;
+			}
+		}
+		return null;
 	}
 
-	@RequestMapping(path = "/routetype", method = RequestMethod.DELETE, consumes = "application/json", produces = "application/json")
-	public DataDeleteResponse deleteRouteTypeList() {
+	@RequestMapping(path = "job/{jobId}/routetypes", method = RequestMethod.DELETE, consumes = "application/json", produces = "application/json")
+	public DataDeleteResponse deleteRouteTypeList(@PathVariable String jobId) {
 
 		DataDeleteResponse response = new DataDeleteResponse();
-		response.setDeleteCount((int) routeTypeRepository.count());
-		routeTypeRepository.deleteAll();
+		RouteTypeList routeTypeList = routeTypeRepository.findOne(jobId);
+		response.setDeleteCount((int) routeTypeList.getRouteTypeList().size() );
+		routeTypeRepository.delete(jobId);
 		response.setStatus("success");
 		return response;
 	}
 
-	@RequestMapping(path = "/routetype/{routeTypeId}", method = RequestMethod.DELETE, consumes = "application/json", produces = "application/json")
-	public DataDeleteResponse deleteRouteType(@PathVariable String routeTypeId) {
+	@RequestMapping(path = "job/{jobId}/routeType/{routeTypeId}", method = RequestMethod.DELETE, consumes = "application/json", produces = "application/json")
+	public DataDeleteResponse deleteRouteType(@PathVariable String jobId, @PathVariable String routeTypeId) {
 
 		DataDeleteResponse response = new DataDeleteResponse();
-		routeTypeRepository.delete(new Integer(routeTypeId));
+		RouteTypeList routeTypeList = routeTypeRepository.findOne(jobId);
+		RouteType routeTypeToBeDeleted = null;
+		for (RouteType routeType : routeTypeList.getRouteTypeList()) {
+			if(routeType.getId() == Integer.valueOf(routeTypeId)) {
+				routeTypeToBeDeleted = routeType;
+			}
+		}
+		routeTypeList.getRouteTypeList().remove(routeTypeToBeDeleted);
+		
+		routeTypeRepository.save(routeTypeList);
 		response.setDeleteCount(1);
 		response.setStatus("success");
 		return response;
 	}
-
-	@RequestMapping(path = "/routetype/{routeTypeId}", method = RequestMethod.PUT, consumes = "application/json", produces = "application/json")
-	public DataSaveResponse saveRouteType(@PathVariable String routeTypeId, @RequestBody RouteType routeType) {
+	
+	
+	@RequestMapping(path = "job/{jobId}/routeType/{routeTypeId}", method = RequestMethod.PUT, consumes = "application/json", produces = "application/json")
+	public DataSaveResponse saveRouteType(@PathVariable String jobId, @PathVariable String routeTypeId, @RequestBody RouteType routeType) {
 
 		DataSaveResponse response = new DataSaveResponse();
-		int recCount = 1;
-
-		RouteType routeTypeInDB = routeTypeRepository.findOne(new Integer(routeTypeId));
-		routeTypeInDB.setName(routeType.getName());
-		routeTypeInDB.setMinValue(routeType.getMinValue());
-		routeTypeInDB.setMaxValue(routeType.getMaxValue());
-		routeTypeRepository.save(routeTypeInDB);
-
-		response.setSaveCount(recCount);
+		RouteTypeList routeTypeList = routeTypeRepository.findOne(jobId);
+		for (RouteType routeTypeToBeUpdated : routeTypeList.getRouteTypeList()) {
+			if(routeTypeToBeUpdated.getId() == Integer.valueOf(routeTypeId)) {
+				routeTypeToBeUpdated = routeType;
+			}
+		}
+		
+		routeTypeRepository.save(routeTypeList);
+		response.setSaveCount(1);
 		response.setStatus("success");
 		return response;
 	}
