@@ -1,7 +1,5 @@
 package com.exceedo.vrpapi.controller;
 
-import java.util.List;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -20,66 +18,80 @@ public class VisitController {
 	@Autowired
 	private VisitRepository visitRepository;
 
-	@RequestMapping(path = "/visit", method = RequestMethod.POST, consumes = "application/json", produces = "application/json")
-	public DataSaveResponse saveVisitList(@RequestBody VisitList visitList) {
+	@RequestMapping(path = "job/{jobId}/visits", method = RequestMethod.POST, consumes = "application/json", produces = "application/json")
+	public DataSaveResponse saveVisitList(@PathVariable String jobId, @RequestBody VisitList visitList) {
 
 		DataSaveResponse response = new DataSaveResponse();
-		int recCount = 0;
-		for (Visit visit : visitList.getVisitList()) {
-			visitRepository.save(visit);
-			recCount++;
-		}
+		visitList.setJobId(jobId);
+		int recCount = visitList.getVisitList().size();
+		visitRepository.save(visitList);
 		response.setSaveCount(recCount);
 		response.setStatus("success");
 		return response;
 	}
 
-	@RequestMapping(path = "/visit", method = RequestMethod.GET, consumes = "application/json", produces = "application/json")
-	public VisitList getVisitList() {
+	@RequestMapping(path = "job/{jobId}/visits", method = RequestMethod.GET, consumes = "application/json", produces = "application/json")
+	public VisitList getVisitList(@PathVariable String jobId) {
 
-		VisitList visitList = new VisitList();
-		List<Visit> list = visitRepository.findAll();
-		visitList.setVisitList(list);
+		VisitList visitList = visitRepository.findOne(jobId);
 		return visitList;
 	}
 
-	@RequestMapping(path = "/visit/{visitId}", method = RequestMethod.GET, consumes = "application/json", produces = "application/json")
-	public Visit getVisitList(@PathVariable String visitId) {
-		Visit visit = visitRepository.findOne(new Integer(visitId));
-		return visit;
+	@RequestMapping(path = "job/{jobId}/visit/{visitId}", method = RequestMethod.GET, consumes = "application/json", produces = "application/json")
+	public Visit getVisit(@PathVariable String jobId, @PathVariable String visitId) {
+		VisitList visitList = visitRepository.findOne(jobId);
+		for (Visit visit : visitList.getVisitList()) {
+			if(visit.getId() == Integer.valueOf(visitId)) {
+				return visit;
+			}
+		}
+		return null;
 	}
 
-	@RequestMapping(path = "/visit", method = RequestMethod.DELETE, consumes = "application/json", produces = "application/json")
-	public DataDeleteResponse deleteVisitList() {
+	@RequestMapping(path = "job/{jobId}/visits", method = RequestMethod.DELETE, consumes = "application/json", produces = "application/json")
+	public DataDeleteResponse deleteVisitList(@PathVariable String jobId) {
 
 		DataDeleteResponse response = new DataDeleteResponse();
-		response.setDeleteCount((int) visitRepository.count());
-		visitRepository.deleteAll();
+		VisitList visitList = visitRepository.findOne(jobId);
+		response.setDeleteCount((int) visitList.getVisitList().size() );
+		visitRepository.delete(jobId);
 		response.setStatus("success");
 		return response;
 	}
 
-	@RequestMapping(path = "/visit/{visitId}", method = RequestMethod.DELETE, consumes = "application/json", produces = "application/json")
-	public DataDeleteResponse deleteVisit(@PathVariable String visitId) {
+	@RequestMapping(path = "job/{jobId}/visit/{visitId}", method = RequestMethod.DELETE, consumes = "application/json", produces = "application/json")
+	public DataDeleteResponse deleteVisit(@PathVariable String jobId, @PathVariable String visitId) {
 
 		DataDeleteResponse response = new DataDeleteResponse();
-		visitRepository.delete(new Integer(visitId));
+		VisitList visitList = visitRepository.findOne(jobId);
+		Visit visitToBeDeleted = null;
+		for (Visit visit : visitList.getVisitList()) {
+			if(visit.getId() == Integer.valueOf(visitId)) {
+				visitToBeDeleted = visit;
+			}
+		}
+		visitList.getVisitList().remove(visitToBeDeleted);
+		
+		visitRepository.save(visitList);
 		response.setDeleteCount(1);
 		response.setStatus("success");
 		return response;
 	}
-
-	@RequestMapping(path = "/visit/{visitId}", method = RequestMethod.PUT, consumes = "application/json", produces = "application/json")
-	public DataSaveResponse saveVisit(@PathVariable String visitId, @RequestBody Visit visit) {
+	
+	
+	@RequestMapping(path = "job/{jobId}/visit/{visitId}", method = RequestMethod.PUT, consumes = "application/json", produces = "application/json")
+	public DataSaveResponse saveVisit(@PathVariable String jobId, @PathVariable String visitId, @RequestBody Visit visit) {
 
 		DataSaveResponse response = new DataSaveResponse();
-		int recCount = 1;
-
-		Visit visitInDB = visitRepository.findOne(new Integer(visitId));
-		visitInDB.setCost(visit.getCost());
-		visitRepository.save(visitInDB);
-
-		response.setSaveCount(recCount);
+		VisitList visitList = visitRepository.findOne(jobId);
+		for (Visit visitToBeUpdated : visitList.getVisitList()) {
+			if(visitToBeUpdated.getId() == Integer.valueOf(visitId)) {
+				visitToBeUpdated = visit;
+			}
+		}
+		
+		visitRepository.save(visitList);
+		response.setSaveCount(1);
 		response.setStatus("success");
 		return response;
 	}
